# Tree-Data-Structures

./: README.md
Hwk_02/src/: dune  hwk_02_enrichment.ml  hwk_02_enrichment.mli  hwk_02_literacy.ml  hwk_02_literacy.mli  hwk_02_mastery.ml  hwk_02_warmup.ml  hwk_02_warmup.mli
Hwk_02/tests/: dune  hwk_02_enrichment_tests.ml  hwk_02_literacy_tests.ml  hwk_02_mastery_tests.ml  hwk_02_warmup_tests.ml
